@startuml domain-model
title Domain model
!pragma layout smetana
skinparam shadowing false
skinparam linetype ortho
skinparam nodesep 80
skinparam ranksep 70

class Property {
  externalId: String
  name: String
  country: String
  city: String
}

class Tenant {
  externalId: String
  name: String
}

class Lease {
  id: Long
  property: Property
  tenant: Tenant
  startDate: LocalDate
  endDate: LocalDate
}

class Turnover {
  id: Long
  lease: Lease
  importRun: ImportRun
  period: YearMonth
  amount: BigDecimal
  currency: String
  status: TurnoverStatus
  submittedAt: Instant
  --
  +flag(): Turnover
  +accept(): Turnover
  +correct(newAmount): Turnover
}

class ValidationIssue {
  id: Long
  turnover: Turnover
  rule: ValidationRule
  description: String
  status: ValidationIssueStatus
  resolution: String
  resolvedBy: String
  resolvedAt: Instant
  --
  +resolve(resolution, resolvedBy, when): ValidationIssue
}

class ImportRun {
  id: Long
  startedAt: Instant
  finishedAt: Instant
  status: ImportRunStatus
  periodFetched: YearMonth
  entriesImported: int
  errorMessage: String
  --
  +succeeded(count): ImportRun
  +failed(message): ImportRun
}

class TurnoverManager {
  +classify(): Turnover
  +raiseDeviationIssue(): ValidationIssue
  +correct(): Validation<Turnover>
  +accept(): Validation<Turnover>
}

Property ||--o{ Lease
Tenant ||--o{ Lease
Lease ||--o{ Turnover
ImportRun ||--o{ Turnover
Turnover ||--o{ ValidationIssue
TurnoverManager ..> Turnover

@enduml
